--- a/pg_backup_api/news.yml
+++ b/pg_backup_api/news.yml
@@ -3,6 +3,24 @@
 # pg-backup-api News - History of user-visible changes
 
 pg-backup-api release notes:
+  - version: "1.0.0"
+    date: "20220928"
+    changes:
+      Notable changes:
+        - Support for running as a WSGI application under Gunicorn.
+      Minor changes:
+        - |
+          Changes to the Barman configuration are now included in the /diagnose
+          output without requiring a restart of pg-backup-api.
+        - |
+          Barman configuration options added in Barman 3.1.0 are now included
+          in the /diagnose output.
+        - Fields relating to pgespresso are removed from the /diagnose output.
+      Bugfixes:
+        - Fix the monotonic increase of memory usage caused by every /diagnose
+          response being retained in the Barman output writer.
+        - Various schema fixes.
+
   - version: "0.2.0"
     date: "20220623"
     changes:
