--- a/pg_backup_api/news.yml
+++ b/pg_backup_api/news.yml
@@ -3,6 +3,31 @@
 # pg-backup-api News - History of user-visible changes
 
 pg-backup-api release notes:
+  - version: "2.0.0"
+    date: "20231003"
+    changes:
+      Notable changes:
+        - |
+          BREAKING: The `/servers/server_name/operations` endpoint now returns a
+          list of dictionaries containing keys `id` and `type` instead of the list
+          of operation IDs which was returned by previous versions.
+        - |
+          BREAKING: The `/servers/server_name/operations/operation_id` endpoint now
+          returns `operation_id` and `status` instead of `recovery_id` and `status`
+          which were returned by previous versions.
+      Minor changes:
+        - Improved help strings and documentation for command line options.
+      Bugfixes:
+        - |
+          Allow pg-backup-api subcommands such as `status` to work regardless of
+          whether pg-backup-api was installed from source or from packages.
+        - |
+          Fix exit code for `pg-backup-api status` so that it is zero if the command
+          completes successfully and non-zero otherwise.
+        - |
+          Fix the `Backup <BACKUP> does not exist` error message so it includes the
+          ID of the requested backup.
+
   - version: "1.3.0"
     date: "20230713"
     changes:
